--- a/.tx/config
+++ b/.tx/config
@@ -472,6 +472,11 @@ file_filter = addons/payment_adyen/i18n/<lang>.po
 source_file = addons/payment_adyen/i18n/payment_adyen.pot
 source_lang = en
 
+[odoo-12.payment_adyen_paybylink]
+file_filter = addons/payment_adyen_paybylink/i18n/<lang>.po
+source_file = addons/payment_adyen_paybylink/i18n/payment_adyen_paybylink.pot
+source_lang = en
+
 [odoo-12.payment_authorize]
 file_filter = addons/payment_authorize/i18n/<lang>.po
 source_file = addons/payment_authorize/i18n/payment_authorize.pot
@@ -971,4 +976,3 @@ source_lang = en
 file_filter = addons/website_twitter/i18n/<lang>.po
 source_file = addons/website_twitter/i18n/website_twitter.pot
 source_lang = en
-
