remove card number, cardholder name and batch no in credit and debit card popup display

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,7 +1,7 @@
 [options]
 ; This is the password that allows database operations:
 ; admin_passwd = admin
-addons_path = C:\Eclipse\Workspace\fg-pogi-dev\addons,C:\Eclipse\Workspace\fg-pogi-dev\custom
+addons_path = C:\j0nan\Workspace\Integration\fg-pogi-dev\addons,C:\j0nan\Workspace\Integration\fg-pogi-dev\custom
 admin_passwd = admin
 db_host = localhost
 db_name =False
