--- a/odoo.conf
+++ b/odoo.conf
@@ -1,10 +1,9 @@
 [options]
 ; This is the password that allows database operations:
 ; admin_passwd = admin
-addons_path = C:\j0nan\Workspace\Integration\fg-pogi-dev\addons,C:\j0nan\Workspace\Integration\fg-pogi-dev\custom
-admin_passwd = admin
 db_host = localhost
-db_name =False
 db_port = 5432
 db_user = odoo
-db_password = odoo
+db_password = admin
+addons_path = C:\AA_WORKSPACE_PYTHON\PRODUCTION\GLOBAL_POS\PRODUCTION\odoo\addons,C:\AA_WORKSPACE_PYTHON\PRODUCTION\GLOBAL_POS\PRODUCTION\odoo\custom
+xmlrpc_port=8083
