First setup odoo

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@ package.json
 
 # avoid adding it after generation from tsconfig command
 tsconfig.json
+
+Makefile
+odoo.conf
+/contrib/*
+/custom/*
+!.gitkeep
