view estate form

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,5 +1,5 @@
 [options]
-addons_path = C:\Users\bingo\Desktop\SATI,C:\Users\bingo\Desktop\SATI\enterprise15
+addons_path = C:\Users\bingo\Desktop\SATI\enterprise15,C:\Users\bingo\Desktop\SATI\odoo\addons,C:\Users\bingo\Desktop\SATI\odoo\custom_addons
 admin_passwd = odoo
 csv_internal_sep = ,
 data_dir = C:\Users\bingo\AppData\Local\OpenERP S.A\Odoo
