--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.1.2 ; python_version > '3.10'
 libsass==0.20.1
 lxml==4.8.0 ; python_version <= '3.10'
 lxml==4.9.2 ; python_version > '3.10'
+markdown==3.5.2
 MarkupSafe==2.0.1 ; python_version <= '3.10'
 MarkupSafe==2.1.2 ; python_version > '3.10'
 num2words==0.5.10
