--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -1,9 +1,9 @@
 [options]
 ; This is the password that allows database operations:
 ; admin_passwd = admin
-db_host = False
-db_port = False
-db_user = odoo
-db_password = False
-;addons_path = /usr/lib/python3/dist-packages/odoo/addons
+db_host = localhost
+db_port = 5432
+db_user = hemesh
+db_password = admin123
+addons_path = /usr/lib/python3/dist-packages/odoo/addons
 default_productivity_apps = True
