--- a/odoo/addons/base/tests/config/save_posix.conf
+++ b/odoo/addons/base/tests/config/save_posix.conf
@@ -51,7 +51,7 @@ server_wide_modules = base,rpc,web
 smtp_password = 
 smtp_port = 25
 smtp_server = localhost
-smtp_ssl = False
+smtp_ssl = none
 smtp_ssl_certificate_filename = 
 smtp_ssl_private_key_filename = 
 smtp_user = 
