--- a/debian/control
+++ b/debian/control
@@ -35,7 +35,7 @@ Depends:
  python3-jinja2,
  python3-libsass,
 # After lxml 5.2, lxml-html-clean is in a separate package
- python3-lxml-html-clean | python3-lxml,
+ python3-lxml,
  python3-num2words,
  python3-ofxparse,
  python3-passlib,
