[IMP] mail, various: remove default '--' in signature
1) Hide the '--' separator added before user signatures, similar to Gmail,
to prevent accidental edits or formatting issues, except for 'Send Message'
and 'Composer' actions.
2) Add '--' before signature while mail is sent.
3) Replace 'read more/less' with 'ellipsis' akin to Gmail in the chatter.
4) Adapt the mail templates for above functionality.

Task-4485719

closes odoo/odoo#194131

Related: odoo/enterprise#79329
Related: odoo/upgrade#7232
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/odoo/cli/templates/l10n_payroll/data/l10n_{{code}}_hr_payroll_demo.xml.template
+++ b/odoo/cli/templates/l10n_payroll/data/l10n_{{code}}_hr_payroll_demo.xml.template
@@ -53,7 +53,7 @@
         <field name="partner_id" ref="l10n_{{code}}_hr_payroll.res_partner_antonina"/>
         <field name="login">antoninakaczmarczyk@example.com</field>
         <field name="password">antoninakaczmarczyk</field>
-        <field name="signature" type="html"><span>--<br/>+A. Kaczmarczyk</span></field>
+        <field name="signature">A. Kaczmarczyk</field>
         <field name="company_ids" eval="[(4, ref('l10n_{{code}}_hr_payroll.res_company_{{code}}'))]"/>
         <field name="company_id" ref="l10n_{{code}}_hr_payroll.res_company_{{code}}"/>
         <field name="groups_id" eval="[(6,0,[ref('base.group_user')])]"/>
