Starting developing a simple module

--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -7,3 +7,4 @@ db_user = odoo
 db_password = False
 ;addons_path = /usr/lib/python3/dist-packages/odoo/addons
 default_productivity_apps = True
+# python odoo-bin -r dbuser -w dbpassword --addons-path=addons -d mydb
