--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -7,4 +7,4 @@ db_user = odoo
 db_password = False
 ;addons_path = /usr/lib/python3/dist-packages/odoo/addons
 default_productivity_apps = True
-# python odoo-bin -r dbuser -w dbpassword --addons-path=addons -d mydb
+# python odoo-bin -r odoo -w 123456789 --addons-path=addons -d odoo --dev=reload
