--- a/odoo/addons/base/tests/config/save_posix.conf
+++ b/odoo/addons/base/tests/config/save_posix.conf
@@ -22,7 +22,7 @@ geoip_city_db = /usr/share/GeoIP/GeoLite2-City.mmdb
 geoip_country_db = /usr/share/GeoIP/GeoLite2-Country.mmdb
 gevent_port = 8072
 http_enable = True
-http_interface = 
+http_interface = 0.0.0.0
 http_port = 8069
 limit_memory_hard = 2684354560
 limit_memory_hard_gevent = None
