[IMP] hr: Employees can have multiple bank accounts
Changing `bank_account_id` m2o field into `bank_account_ids` m2m field,
within `hr.employee`, allowing employees to associate with than one bank account.

New wizard:
- A wizard to let HR users distribute the salary of an employee over their bank accounts and allocate either a fixed amount or a percentage of the remaining to each bank account.
- HR can reorder the bank accounts within the wizard to indicate an order of priority, the top bank account will be considered as the primary bank account.

New widget:
- Overriding the many2many widget to showing the amount allocated to each bank account.

Expenses receipts and payments will use the primary bank account of the employee.

Task-4908556

closes odoo/odoo#222226

Related: odoo/enterprise#91934
Related: odoo/upgrade#8272
Signed-off-by: Yannick Tivisse (yti) <yti@odoo.com>

--- a/odoo/cli/templates/l10n_payroll/data/l10n_{{code}}_hr_payroll_demo.xml.template
+++ b/odoo/cli/templates/l10n_payroll/data/l10n_{{code}}_hr_payroll_demo.xml.template
@@ -100,7 +100,7 @@
         <field name="country_id" ref="base.{{code}}"/>
         <field name="resource_calendar_id" ref="resource.resource_calendar_std"/>
         <field name="identification_id">8752027365496</field>
-        <field name="bank_account_id" ref="l10n_{{code}}_hr_payroll.res_partner_bank_account_norberta"/>
+        <field name="bank_account_ids" eval="[(4, ref('l10n_{{code}}_hr_payroll.res_partner_bank_account_norberta'))]"/>
         <field name="company_id" ref="l10n_{{code}}_hr_payroll.res_company_{{code}}"/>
         <field name="user_id" ref="l10n_{{code}}_hr_payroll.user_antonina"/>
     </record>
